--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^8.0|^8.1|^8.2|^8.3|^8.4",
-        "illuminate/support": "^11.0|^12.0"
+        "illuminate/support": "^11.0|^12.0",
+        "gehrisandro/tailwind-merge-laravel": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
