--- a/resources/views/components/katana/katana.yml
+++ b/resources/views/components/katana/katana.yml
@@ -1,19 +1,49 @@
 components:
-  base:
-    - accordion
-    - alert
-    - audio-player
-    - badge
-    - button
-    - command
-    - drawer
-    - separator
-    - toast
-  form:
-    - audio
-    - checkbox
-    - image
-    - label
-  effect_animation:
-    - backgrounds.silk
-    - text-animations.decrypt
+  Base:
+    - id: accordion
+      name: Accordion
+    - id: alert
+      name: Alert
+    - id: audio-player
+      name: Audio Player
+    - id: badge
+      name: Badge
+    - id: button
+      name: Button
+    - id: command
+      name: Command
+    - id: dialog
+      name: Dialog
+    - id: drawer
+      name: Drawer
+    - id: separator
+      name: Separator
+    - id: splitter
+      name: Splitter
+    - id: toast
+      name: Toast
+  Layouts: 
+    - id: sidebar
+      name: Sidebar
+    - id: header
+      name: header
+  Form_inputs:
+    - id: audio
+      name: Audio
+    - id: checkbox
+      name: Checkbox
+    - id: code-editor
+      name: Code Editor
+    - id: image
+      name: Image
+    - id: label
+      name: Label
+    - id: monaco-editor
+      name: Monaco Editor
+    - id: tiptap
+      name: Tiptap
+  Effect/Animations:
+    - id: backgrounds.silk
+      name: Background Silk Effect
+    - id: text-animations.decrypt
+      name: Text Decrypt Animation
