Adding more content to dropdown

--- a/resources/views/components/katana/katana.yml
+++ b/resources/views/components/katana/katana.yml
@@ -22,6 +22,8 @@ components:
       name: Dialog
     - id: drawer
       name: Drawer
+    - id: dropdown
+      name: Dropdown
     - id: image-upload
       name: Image Upload
     - id: label
