Adding latest updates

--- a/resources/views/components/katana/katana.yml
+++ b/resources/views/components/katana/katana.yml
@@ -32,6 +32,8 @@ components:
       name: Modal
     - id: monaco-editor
       name: Monaco Editor
+    - id: popover
+      name: Popover
     - id: separator
       name: Separator
     - id: splitter
