Adding latest updates

--- a/resources/views/components/katana/badge.yml
+++ b/resources/views/components/katana/badge.yml
@@ -3,15 +3,23 @@ props:
   - name: variant
     description: The badge variant style
     type: select
-    default: default
+    default: primary
     options:
-      - default
+      - primary
       - secondary
       - destructive
       - outline
       - info
       - success
       - warning
+  - name: size
+    description: The size of the badge
+    type: select
+    default: sm
+    options:
+      - sm
+      - md
+      - lg
   - name: icon
     description: Optional icon component name (e.g., heroicon-s-check)
     type: text
@@ -23,14 +31,6 @@ props:
     options:
       - before
       - after
-  - name: size
-    description: The size of the badge
-    type: select
-    default: sm
-    options:
-      - sm
-      - md
-      - lg
 slots:
   - name: slot
     description: The main content for the badge
