start of tooltip

--- a/resources/views/components/katana/katana.yml
+++ b/resources/views/components/katana/katana.yml
@@ -44,6 +44,8 @@ components:
       name: Tiptap
     - id: toast
       name: Toast
+    - id: tooltip
+      name: Tooltip
   Layouts:
     - id: sidebar
       name: Sidebar
