--- a/resources/views/components/katana/katana.yml
+++ b/resources/views/components/katana/katana.yml
@@ -14,6 +14,8 @@ components:
       name: Badge
     - id: button
       name: Button
+    - id: card
+      name: Card
     - id: checkbox
       name: Checkbox
     - id: command
