--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "@tiptap/core": "^2.0.0",
+    "@tiptap/extension-link": "^2.0.0",
+    "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/pm": "^2.0.0",
-    "@tiptap/starter-kit": "^2.0.0",
-    "@tiptap/extension-link": "^2.0.0"
+    "@tiptap/starter-kit": "^2.0.0"
   },
   "devDependencies": {
     "esbuild": "^0.19.0"
